hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tapply_enum.php.exp
File "tapply_enum.php", line 6, characters 12-15:
Invalid return type (Typing[4110])
File "tapply_enum.php", line 6, characters 22-24:
This is a value of Pos
File "tapply_enum.php", line 6, characters 12-15:
It is incompatible with a dynamic value
